objects/FieloEE__Reward__c.object
<CustomObject>
    <description>Rewards that members can redeem. Rewards are shown in a catalog that can be browsed in the membersâ€™ portal.</description>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <description>Image of this reward.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Upload an image for this reward.</inlineHelpText>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__AvailableDays__c</fullName>
        <description>Number of days during which the voucher will be valid. If left blank, the voucher will not expire.</description>
        <inlineHelpText>Specify how many days the voucher will be usable since the redemption is created. Leave it blank if you do not want an expiration date.</inlineHelpText>
        <label>Reward Voucher Validity (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The category to which the reward belongs.</description>
        <inlineHelpText>Choose the category from the list where this reward will appear on the member portal.</inlineHelpText>
        <label>Category</label>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__CondenserId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Condenser Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description of this reward to be showed in the members&apos; portal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description of the product to be shown in the front end.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationDate__c</fullName>
        <description>Expiration date for this reward.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify the expiration date of the reward.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExternalName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__HasSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Multi Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Image__c</fullName>
        <formula>&quot;&lt;img src=\&quot; servlet/servlet.FileDownload?file=&quot; &amp; FieloEE__AttachmentId__c &amp; &quot;\&quot;/&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__InstructionsRichText__c</fullName>
        <description>Detailed instructions for redeeming this reward.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Instructions RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloEE__Instructions__c</fullName>
        <description>Instructions to redeem this reward that will appear in the voucher. These instructions overrule the instructions in Settings.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Define the instructions that will be printed in the voucher for redeeming this reward. These instructions overrule the instructions in Settings.</inlineHelpText>
        <label>Specific Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Intangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated Field</description>
        <inlineHelpText>Click here to set an unlimited quantity for this reward.</inlineHelpText>
        <label>zz_deprecated_Unlimited Quantity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ItemsAvailableReadOnly__c</fullName>
        <formula>IF( ISPICKVAL(FieloEE__VoucherCreationMode__c  , &apos;Unlimited&apos;) , $Label.fieloee__inforewardgenerateitemswhenstockunlimited ,  TEXT( FieloEE__Stock__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Items Available (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointsCant__c</fullName>
        <description>Number of points to redeem this reward.</description>
        <inlineHelpText>Specify the number of points necessary to redeem this reward.</inlineHelpText>
        <label>Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Price__c</fullName>
        <description>The cost of purchasing this reward for your company.</description>
        <inlineHelpText>Specify the cost of purchase of this reward. This will be used only for reporting purposes.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this reward belongs.</description>
        <inlineHelpText>Select the program to which this reward belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityAvailable__c</fullName>
        <description>Total stock.</description>
        <inlineHelpText>The available quantity of the reward.</inlineHelpText>
        <label>Quantity Available</label>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__IsCondenser__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityComments__c</fullName>
        <label>Quantity Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityFieloPoints__c</fullName>
        <description>Deprecated Field</description>
        <inlineHelpText>Specify the value in Mall Points to redeem this reward.</inlineHelpText>
        <label>zz_deprecated_Mall Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityLikes__c</fullName>
        <label>Quantity Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityPending__c</fullName>
        <description>Deprecated Field</description>
        <inlineHelpText>Click here to set an unlimited quantity for this reward.</inlineHelpText>
        <label>zz_deprecated_Quantity Pending</label>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityRedeem__c</fullName>
        <description>Total redeemed of the product</description>
        <inlineHelpText>The quantity of rewards that has been redeemed.</inlineHelpText>
        <label>Quantity Redeem</label>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <inlineHelpText>Specify the rule that will apply toward the redemption of the prize.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardFacilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The provider of this reward.</description>
        <inlineHelpText>Specify the provider of this reward. Leave it blank if this reward has not provider.</inlineHelpText>
        <label>Reward Facilitator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__StockWarning__c</fullName>
        <description>Stock quantity of this reward that will trigger an email warning you that the stock is low.</description>
        <inlineHelpText>Specify the stock limit alert. This will be used to send an alert email.</inlineHelpText>
        <label>Stock Warning</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of units of this reward.</description>
        <label>Items Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__UniqueVoucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will create a voucher with two or more items of this reward.</description>
        <inlineHelpText>Check this option if you want to create a voucher in a redemption that have two or more items of this reward. This voucher will show the quantity field.</inlineHelpText>
        <label>Unique Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__VotesQuantity__c</fullName>
        <description>Rate of the product</description>
        <inlineHelpText>This is the quantity of &apos;likes&apos; the reward received by members.</inlineHelpText>
        <label>Quantity Votes</label>
        <summaryForeignKey>FieloEE__RewardLike__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__VoucherCreationMode__c</fullName>
        <description>If voucher numbers are from a provider, vouchers are Preload, if the system creates them, they are Random</description>
        <inlineHelpText>Determine whether the codes to get points will be preloaded or automatic</inlineHelpText>
        <label>Stock Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlled By Quantity</fullName>
                    <default>true</default>
                    <label>Controlled By Quantity</label>
                </value>
                <value>
                    <fullName>Controlled By Item</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__isInstantReward__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make this reward redeemable for a specific action, instead of points.</description>
        <inlineHelpText>Check this option if you want to give this reward for free (for no points) when the member does a special action.</inlineHelpText>
        <label>Instant Reward</label>
        <type>Checkbox</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>FieloEE__All_Rewards</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Category__c</columns>
        <columns>FieloEE__Description__c</columns>
        <columns>FieloEE__PointsCant__c</columns>
        <columns>FieloEE__VoucherCreationMode__c</columns>
        <columns>FieloEE__Stock__c</columns>
        <columns>FieloEE__ExpirationDate__c</columns>
        <columns>FieloEE__isInstantReward__c</columns>
        <columns>FieloEE__Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rewards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__AvailableRewards</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Category__c</columns>
        <columns>FieloEE__Description__c</columns>
        <columns>FieloEE__PointsCant__c</columns>
        <columns>FieloEE__ExpirationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Stock__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Available Rewards</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__Available_Days</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__AvailableDays__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__AvailableDays__c</errorDisplayField>
        <errorMessage>value must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__ChangeStockMode</fullName>
        <active>true</active>
        <errorConditionFormula>((ISPICKVAL(PRIORVALUE(FieloEE__VoucherCreationMode__c), &apos;Controlled By Quantity&apos;) &amp;&amp; (ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Unlimited&apos;) || ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Controlled By Item&apos;))) ||
(ISPICKVAL(PRIORVALUE(FieloEE__VoucherCreationMode__c), &apos;Controlled By Item&apos;) &amp;&amp; (ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Unlimited&apos;) ||
ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Controlled By Quantity&apos;)))) &amp;&amp;
FieloEE__Stock__c &gt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__VoucherCreationMode__c</errorDisplayField>
        <errorMessage>This operation is allowed when stock is equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloEE__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__MultiVoucher</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__UniqueVoucher__c &amp;&amp;  ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Controlled By Item&apos;)</errorConditionFormula>
        <errorMessage>Rewards controlled By Item with preloaded vouchers can&apos;t be unique voucher</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Points_Required</fullName>
        <active>true</active>
        <description>Validation to set allways a point value to the reward</description>
        <errorConditionFormula>ISNULL( FieloEE__PointsCant__c )</errorConditionFormula>
        <errorDisplayField>FieloEE__PointsCant__c</errorDisplayField>
        <errorMessage>The points of the reward are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Price_Possitive</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__Price__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__Price__c</errorDisplayField>
        <errorMessage>value must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Quantity_Points_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__PointsCant__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__PointsCant__c</errorDisplayField>
        <errorMessage>value must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Stock_Positive</fullName>
        <active>true</active>
        <description>Stock Must be positive</description>
        <errorConditionFormula>AND(IF(ISCHANGED(FieloEE__Stock__c) ,
IF( OR(ISBLANK(FieloEE__Stock__c) , FieloEE__Stock__c &lt; 0) ,
true,
false),
false), NOT( ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Unlimited&apos;) ))</errorConditionFormula>
        <errorMessage>The stock should be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Unlimited</fullName>
        <active>false</active>
        <errorConditionFormula>FieloEE__Intangible__c = TRUE &amp;&amp;  ISPICKVAL( FieloEE__VoucherCreationMode__c , &apos;Preload&apos; )</errorConditionFormula>
        <errorMessage>A reward cannot be unlimited and preload at the same time</errorMessage>
    </validationRules>
</CustomObject>